# parana_banco

./: Dockerfile  Makefile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: github-actions.yml
app/: main.py
app/artifacts/: modelo.joblib
app/inference/: inference_features.py  predict.py
mlops/: main.py  modelo.joblib:Zone.Identifier
tests/: test_main.py
tests/unit/: test_main.py
