[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "1.0.1"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
joblib = "^1.3.2"
datetime = "^5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
