[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
scikit-learn = "1.0.1"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
joblib = "^1.3.2"
datetime = "^5.4"
pytest = "^7.4.4"
httpx = "^0.26.0"
python-dateutil = "^2.8.2"
black = "^23.12.1"
isort = "^5.13.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

